Fix button spacing

--- a/styles.css
+++ b/styles.css
@@ -132,12 +132,17 @@ form {
     font-size: 16px;
     font-weight: bold;
     border-radius: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 .button-container button:hover {
     background-color: goldenrod;
     border: solid 2px goldenrod;
     color: black;
+}
+
+.conclusion-container {
+    margin-top: 4rem;
 }
 
 .conclusion-container a {
